--- a/payment/Dockerfile
+++ b/payment/Dockerfile
@@ -2,6 +2,12 @@ FROM python:3.12-slim
 
 WORKDIR /home/flask-app
 
+RUN apt-get update && apt-get install -y \
+    gcc \
+    libc-dev \
+    librdkafka-dev
+
+
 COPY ./requirements.txt .
 
 RUN pip install -r requirements.txt
