--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
     image: order:latest
     environment:
       - GATEWAY_URL=http://gateway:80
-    command: gunicorn -b 0.0.0.0:5000 -w 2 --timeout 30 --log-level=info app:app
+    command: uvicorn app:app --host 0.0.0.0 --port 5000
     env_file:
       - env/order_redis.env
     depends_on:
@@ -50,7 +50,7 @@ services:
   stock-service:
     build: ./stock
     image: stock:latest
-    command: gunicorn -b 0.0.0.0:5000 -w 2 --timeout 30 --log-level=info app:app
+    command: uvicorn app:app --host 0.0.0.0 --port 5000
     env_file:
       - env/stock_redis.env
     depends_on:
@@ -64,7 +64,7 @@ services:
   payment-service:
     build: ./payment
     image: user:latest
-    command: gunicorn -b 0.0.0.0:5000 -w 2 --timeout 30 --log-level=info app:app
+    command: uvicorn app:app --host 0.0.0.0 --port 5000
     env_file:
       - env/payment_redis.env
     depends_on:
