--- a/order/requirements.txt
+++ b/order/requirements.txt
@@ -1,6 +1,6 @@
-Flask==3.0.2
+fastapi==0.115.11
 redis==5.0.3
-gunicorn==21.2.0
+uvicorn==0.34.0
 msgspec==0.18.6
 requests==2.31.0
 confluent-kafka==1.8.2
