--- a/payment/Dockerfile
+++ b/payment/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.12-slim
 
-WORKDIR /home/flask-app
+WORKDIR /home/fastapi-app
 
 RUN apt-get update && apt-get install -y \
     gcc \
