--- a/order/Dockerfile
+++ b/order/Dockerfile
@@ -5,7 +5,12 @@ WORKDIR /home/flask-app
 RUN apt-get update && apt-get install -y \
     gcc \
     libc-dev \
-    librdkafka-dev
+    librdkafka-dev \
+    dos2unix \
+    netcat-openbsd
+
+COPY wait-for-it.sh .
+RUN dos2unix wait-for-it.sh && chmod +x wait-for-it.sh
 
 COPY ./requirements.txt .
 
