--- a/gateway_nginx.conf
+++ b/gateway_nginx.conf
@@ -1,6 +1,11 @@
-events { worker_connections 1024;}
+events {
+    worker_connections 10000;
+}
 
 http {
+    limit_req_zone $binary_remote_addr zone=req_zone:100m rate=100r/s;
+    limit_conn_zone $binary_remote_addr zone=conn_zone:100m;
+
     upstream order-app {
         server order-service:5000;
     }
@@ -10,18 +15,27 @@ http {
     upstream stock-app {
         server stock-service:5000;
     }
+
     server {
         listen 80;
+
+        limit_conn conn_zone 50;
+
         location /orders/ {
-           proxy_pass   http://order-app/;
+            proxy_pass   http://order-app/;
+            limit_req zone=req_zone burst=200 nodelay;
         }
         location /payment/ {
-           proxy_pass   http://payment-app/;
+            proxy_pass   http://payment-app/;
+            limit_req zone=req_zone burst=200 nodelay;
         }
         location /stock/ {
-           proxy_pass   http://stock-app/;
+            proxy_pass   http://stock-app/;
+            limit_req zone=req_zone burst=200 nodelay;
         }
+
         access_log  /var/log/nginx/server.access.log;
     }
+
     access_log  /var/log/nginx/access.log;
 }
