--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,8 @@ services:
   order-service:
     build: ./order
     image: order:latest
+#    volumes:
+#      - "./order/order_logs.txt:/order/order_logs.txt"
     environment:
       - GATEWAY_URL=http://gateway:80
     command: [ "bash", "./wait-for-it.sh", "kafka", "9092", "--", "uvicorn", "app:app", "--host", "0.0.0.0", "--port", "5000"]
