Implement database replication with replica failover

--- a/env/order_redis.env
+++ b/env/order_redis.env
@@ -1,4 +1,4 @@
-REDIS_HOST=order-db
-REDIS_PORT=6379
+REDIS_SENTINEL_HOSTS=order-sentinel1:26379,order-sentinel2:26379,order-sentinel3:26379
+REDIS_MASTER_NAME=order-master
 REDIS_PASSWORD=redis
 REDIS_DB=0
