--- a/env/payment_redis.env
+++ b/env/payment_redis.env
@@ -1,4 +1,4 @@
-REDIS_HOST=payment-db
-REDIS_PORT=6379
+REDIS_SENTINEL_HOSTS=payment-sentinel1:26379,payment-sentinel2:26379,payment-sentinel3:26379
+REDIS_MASTER_NAME=payment-master
 REDIS_PASSWORD=redis
 REDIS_DB=0
