--- a/env/stock_redis.env
+++ b/env/stock_redis.env
@@ -1,4 +1,4 @@
-REDIS_HOST=stock-db
-REDIS_PORT=6379
+REDIS_SENTINEL_HOSTS=stock-sentinel1:26379,stock-sentinel2:26379,stock-sentinel3:26379
+REDIS_MASTER_NAME=stock-master
 REDIS_PASSWORD=redis
 REDIS_DB=0
